# Shartube

./: .gitignore  Jenkinsfile  LICENSE  README.md
.circleci/: config.yml
.devcontainer/: devcontainer.json  postCreate.sh
docker-compose/: .base.env.example  .cdn-service.env.example  .gitignore  Makefile  docker-compose.db.yaml  docker-compose.prod.yaml  docker-compose.yaml
docker-compose/api-gateway/: config.json
docker-compose/user/: .gitignore  gen_key.ts  note.txt
server/: .base.env.example  .gitignore  docker-compose.yml  pub_note.md
server/api-gateway/: .dockerignore  Dockerfile  app.nginx  config.json  go.mod  go.sum  main.go  nginx.conf  note.txt
server/cdn-service/: .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  package-lock.json  package.json  tsconfig.json
server/cdn-service/src/: index.ts  main.rs  types.rs  upload_images.rs
server/cdn-service/src/@type-api/: index.ts
server/cdn-service/src/discord/: index.ts
server/cdn-service/src/discord/commands/: index.ts
server/cdn-service/src/discord/verify/: index.ts
server/cdn-service/src/event/: index.ts
server/cdn-service/src/events/: index.ts
server/cdn-service/src/route/: mod.rs
server/cdn-service/src/util/: mod.rs
server/cdn-service/src/ws/: mod.rs
server/comic/: Dockerfile  go.mod  go.sum  server.go
server/graphql-gateway/: Dockerfile  dockerfile  index.ts  note.md  package-lock.json  package.json  router.yaml  supergraph.yaml
server/like-service/: .dockerignore  Cargo.toml  Dockerfile
server/like-service/src/: main.rs
server/like-service/src/graphql/: context.rs  mod.rs  schema.rs  types.rs
server/like-service/src/rest/: mod.rs
server/like-service/src/types/: mod.rs
server/like-service/src/util/: auth.rs  checkIdReal.rs  check_id_real.rs  get_db_url.rs  mod.rs  service.rs
server/meme/: Dockerfile  go.mod  go.sum  main.go
server/save-service/: Dockerfile
server/user/: note.txt  (+11 more)
web/: .env.example  .prettierignore  .prettierrc.json  codegen.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+162 files in other folders)
