[package]
name = "upload_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hyper = { version = "0.14.23", features = ["full"] }
hyper-tls = "0.5.0"
salvo = { version = "0.37.9" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["full"] }
tungstenite = "0.18.0"
url = "2.3.1"
uuid = { version = "1.3.0", features = ["v4", "v8"] }
