[package]
name = "upload_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hyper = { version = "0.14.27", features = ["full"] }
hyper-tls = "0.5.0"
redis = { version = "0.24.0", features = ["tokio", "tokio-comp", "json"] }
salvo = { version = "0.59.0", features = ["logging"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = "0.1.14"
url = "2.3.1"
uuid = { version = "1.3.0", features = ["v4", "v8"] }
